--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-uglify": "^3.0.2"
+  },
+  "dependencies": {
+    "@babel/core": "^7.4.3",
+    "child_process": "^1.0.2",
+    "gulp-babel": "^8.0.0-beta.2"
   }
 }
