--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-concat": "^2.6.1",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "gulp-util": "^3.0.8"
   }
 }
