--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
   }
 }
