--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8"
   },
-  "dependencies": {
+  "dependencies": {},
+  "peerDependencies": {
     "axios": "^0.19.0"
   }
 }
