--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "holdmyticket-client-processor",
   "version": "0.0.13",
-  "main": "index.js",
+  "main": "/dist/hmtclientprocessor.min.js",
   "repository": "https://github.com/HoldMyTicket/holdmyticket-client-processor.git",
   "author": "wes@holdmyticket.com",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "axios": "^0.19.0",
     "child_process": "^1.0.2",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-concat": "^2.6.1",
-    "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "webpack-stream": "^5.2.1"
   },
   "dependencies": {},
   "peerDependencies": {
