--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.4.3",
-    "axios": "^0.19.0",
     "child_process": "^1.0.2",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-concat": "^2.6.1",
     "gulp-util": "^3.0.8",
+    "jest": "^24.9.0",
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
@@ -25,8 +25,5 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-polyfill": "^6.26.0"
   },
-  "peerDependencies": {
-    "axios": "^0.19.0",
-    "qs": "^6.9.1"
-  }
+  "peerDependencies": {}
 }
