--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
     "@babel/plugin-transform-runtime": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "babel-jest": "^24.9.0",
     "child_process": "^1.0.2",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0-beta.2",
