seperating out the tests into their own files and adding jest watch command to package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "wes@holdmyticket.com",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
