--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
     "@babel/plugin-transform-runtime": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "@babel/runtime": "^7.7.4",
+    "babel-cli": "^6.26.0",
     "babel-jest": "^24.9.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
     "child_process": "^1.0.2",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0-beta.2",
@@ -24,11 +28,6 @@
     "jest": "^24.9.0",
     "webpack-stream": "^5.2.1"
   },
-  "dependencies": {
-    "@babel/runtime": "^7.7.4",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-polyfill": "^6.26.0"
-  },
+  "dependencies": {},
   "peerDependencies": {}
 }
