making jest use the coverage option
This gives us more insight into what's tested in the lib and generates a covereage folder so we can look at an html report if we want to

--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
   "repository": "https://github.com/HoldMyTicket/holdmyticket-client-processor.git",
   "author": "wes@holdmyticket.com",
   "license": "MIT",
+  "jest": {
+    "verbose": true,
+    "collectCoverageFrom": [
+      "src/hmt-client-processor.js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "scripts": {
-    "test": "jest --verbose",
+    "test": "jest --coverage",
     "test:watch": "jest --watchAll"
   },
   "devDependencies": {
