removing console logs with babel plugin and excluding .warn and .error
When building console.logs will be removed from the lib so they aren't included by accident in a new release

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-cli": "^6.26.0",
     "babel-jest": "^24.9.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-polyfill": "^6.26.0",
     "child_process": "^1.0.2",
     "gulp": "^4.0.0",
