--- a/package.json
+++ b/package.json
@@ -41,5 +41,13 @@
   "dependencies": {},
   "peerDependencies": {
     "qs": "^6.9.1"
+  },
+  "prettier":
+  {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "printWidth": 120
   }
 }
