--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-concat": "^2.6.1",
     "gulp-util": "^3.0.8",
-    "jest": "^24.9.0",
+    "jest": "^27.0.6",
     "webpack-stream": "^5.2.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "qs": "^6.10.1"
+  },
   "peerDependencies": {
     "qs": "^6.9.1"
   }
