--- a/package.json
+++ b/package.json
@@ -8,31 +8,11 @@
   "jest": {
     "verbose": true,
     "collectCoverageFrom": [
-      "src/*.js"
+      "src/hmt-client-processor.js"
     ],
-    "roots": [
-      "<rootDir>",
-      "node_modules"
-    ],
-    "modulePaths": [
-      "<rootDir>",
-      "node_modules"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "src"
-    ],
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node",
-      "mjs",
-      "ts"
-    ],
-    "testEnvironment": "jsdom"
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "scripts": {
     "dev": "gulp --type dev",
@@ -59,9 +39,7 @@
     "jest": "^27.0.6",
     "webpack-stream": "^5.2.1"
   },
-  "dependencies": {
-    "qs": "^6.10.1"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "qs": "^6.9.1"
   }
