--- a/package.json
+++ b/package.json
@@ -40,27 +40,27 @@
     "test:watch": "jest --watchAll"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
+    "@babel/cli": "^7.24.0",
+    "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-export-default-from": "^7.7.4",
+    "@babel/plugin-transform-async-to-generator": "^7.24.0",
     "@babel/plugin-transform-runtime": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/runtime": "^7.7.4",
-    "babel-cli": "^6.26.0",
+    "ansi-colors": "^4.1.3",
     "babel-jest": "^24.9.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-polyfill": "^6.26.0",
-    "child_process": "^1.0.2",
+    "fancy-log": "^2.0.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-concat": "^2.6.1",
-    "gulp-util": "^3.0.8",
     "jest": "^27.0.6",
-    "webpack-stream": "^5.2.1"
+    "qs": "^6.9.1",
+    "webpack": "^5.91.0",
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {},
-  "peerDependencies": {
-    "qs": "^6.9.1"
-  }
+  "peerDependencies": {}
 }
