--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-polyfill": "^6.26.0",
     "fancy-log": "^2.0.0",
-    "gulp": "^4.0.0",
-    "gulp-babel": "^8.0.0-beta.2",
+    "gulp": "^5.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "jest": "^27.0.6",
     "qs": "^6.9.1",
