chore(package.json): move 'qs' from devDependencies to dependencies as it is required in production code

--- a/package.json
+++ b/package.json
@@ -57,10 +57,11 @@
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "jest": "^27.0.6",
-    "qs": "^6.9.1",
     "webpack": "^5.91.0",
     "webpack-stream": "^7.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "qs": "^6.9.1"
+  },
   "peerDependencies": {}
 }
